--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,6 @@ Homestead.json
 /storage/*.key
 /vendor
 .phpunit.result.cache
-npm-debug.log
 yarn-error.log
 .phpstorm.meta.php
 _ide_helper.php
@@ -35,3 +34,6 @@ _ide_helper.php
 
 package-lock.json
 composer.lock
+
+public/css
+public/js
